restructure for new book info layout
git-svn-id: file:///srv/svn/publican/trunk@398 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/docs/pot/Author_Group.pot
+++ b/publican/content/docs/pot/Author_Group.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-02-29 12:08+0000\n"
+"POT-Creation-Date: 2008-08-20 05:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -24,7 +24,47 @@ msgstr ""
 #: Author_Group.xml:9
 #, no-c-format
 msgid ""
+"<firstname>Joshua</firstname> <surname>Oakes</surname> <affiliation> "
+"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
+"affiliation> <email>joakes@redhat.com</email>"
+msgstr ""
+
+#. Tag: author
+#: Author_Group.xml:18
+#, no-c-format
+msgid ""
 "<firstname>Murray</firstname> <surname>McAllister</surname> <affiliation> "
 "<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
 "affiliation> <email>mmcallis@redhat.com</email>"
+msgstr ""
+
+#. Tag: author
+#: Author_Group.xml:27
+#, no-c-format
+msgid ""
+"<firstname>Joshua</firstname> <surname>Wulf</surname> <affiliation> "
+"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
+"affiliation> <email>jwulf@redhat.com</email>"
+msgstr ""
+
+#. Tag: editor
+#: Author_Group.xml:36
+#, no-c-format
+msgid ""
+"<firstname>Brian</firstname> <surname>Fort&eacute;</surname> <affiliation> "
+"<orgname>Red Hat</orgname> <orgdiv>Engineering Content Services</orgdiv> </"
+"affiliation> <email>bforte@redhat.com</email>"
+msgstr ""
+
+#. Tag: othercredit
+#: Author_Group.xml:45
+#, no-c-format
+msgid ""
+"<firstname>Jeff</firstname> <surname>Fearn</surname> <affiliation> "
+"<shortaffil> <inlinemediaobject> <imageobject> <imagedata fileref=\"images/"
+"engops.png\" format=\"PNG\"/> </imageobject> <textobject> "
+"<phrase>Engineering Operations Logo</phrase> </textobject> </"
+"inlinemediaobject> </shortaffil> <orgname>Red Hat</orgname> "
+"<orgdiv>Engineering Operations</orgdiv> </affiliation> <contrib> Extensive "
+"review and rough drafts. </contrib><email>jfearn@redhat.com</email>"
 msgstr ""
