--- a/publican/content/docs/pot/Book_Info.pot
+++ b/publican/content/docs/pot/Book_Info.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-02-29 12:08+0000\n"
+"POT-Creation-Date: 2008-08-20 05:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -23,19 +23,27 @@ msgstr ""
 #. Tag: subtitle
 #: Book_Info.xml:7
 #, no-c-format
-msgid "Publican"
+msgid ""
+"Publishing books, articles, papers and multi-volume sets with DocBook XML"
 msgstr ""
 
 #. Tag: para
-#: Book_Info.xml:10
+#: Book_Info.xml:13
 #, no-c-format
 msgid ""
-"This book will help you install, use, create, and publish Docbook XML books "
-"using the publican package."
+"This book will help you install publican. It also provides instructions for "
+"using publican to create and publish DocBook XML-based books, articles and "
+"book-sets. This guide assumes you are already familiar with DocBook XML."
+msgstr ""
+
+#. Tag: phrase
+#: Book_Info.xml:21
+#, no-c-format
+msgid "Logo"
 msgstr ""
 
 #. Tag: holder
-#: Book_Info.xml:20
+#: Book_Info.xml:27
 #, no-c-format
 msgid "Red Hat, Inc."
 msgstr ""
