update pot and po files
git-svn-id: file:///srv/svn/publican/trunk@495 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/docs/pot/Introduction.pot
+++ b/publican/content/docs/pot/Introduction.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-08-27 06:34+0000\n"
+"POT-Creation-Date: 2008-09-29 04:47+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -92,7 +92,10 @@ msgstr ""
 #: Introduction.xml:29
 #, no-c-format
 msgid ""
-"If there is sufficient demand to add conditions or over-ride this and other "
-"choices designed to improve and maintain the published standard of material, "
-"we will consider requests to add such functionality."
+"Entities also present an essentially insurmountable obstacle to quality "
+"translation (see <xref linkend=\"sect-Publican-Files_in_the_Book_directory-"
+"Book_Name.ent\"/>). Consequently, while we are not reducing the "
+"<filename><replaceable>Book_Name</replaceable>.ent</filename> file's "
+"functionality, we are no longer considering requests to add functionality or "
+"features associated with Entity use."
 msgstr ""
